package dh.backend.service;

import dh.backend.model.Usuario;

public interface servicioDescargaSpotify {

    String descargar(Usuario usuario);
}
